Turned it into a single cotent-script application that deletes the elements, not just hides them

--- a/manifest.json
+++ b/manifest.json
@@ -11,14 +11,10 @@
 
   "permissions": ["notifications", "activeTab", "contextMenus"],
 
-  "background": {
-    "scripts": ["background-script.js"]
-  },
-
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content-script.js", "page-eater.js"]
+      "js": ["content-script.js"]
     }
   ],
 
